--- a/VIT_Module/3-Calendar_AppScript_Installation/appsscript.json
+++ b/VIT_Module/3-Calendar_AppScript_Installation/appsscript.json
@@ -27,5 +27,9 @@
         "libraryId": "1B7FSrk5Zi6L1rSxxTDgDEUsPzlukDsi4KGuTMorsTQHhGBzBkMun4iDF"
       }
     ]
+  },
+  "webapp": {
+    "executeAs": "USER_ACCESSING",
+    "access": "ANYONE"
   }
 }
